[MOD] Elimina boton de debugeo

--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>DIMENSIÓN AUDITIVA AJENA</title>
+        <link rel="stylesheet" href="master.css" />
     </head>
 
     <body>
         <div>
             <button onclick="iniciar_proceso()" value="Empezar" />
-        </div>
-        <div>
-            <button  value="Empezar" />
         </div>
 
         <audio src="audios/fondo_auditivo.wav" autoplay="true" id="capa_1" loop="true">
