[MOD] Mosifica a viszaiazaicon de boton de inicio

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     </head>
 
     <body>
-        <div>
-            <button onclick="iniciar_proceso()" value="Empezar" />
-        </div>
+        <button onclick="iniciar_proceso()" text="Empezar" id="boton">Sumergir</button>
 
         <audio src="audios/fondo_auditivo.wav" autoplay="true" id="capa_1" loop="true">
         </audio>
